--- a/JA_DisEco_Fall2025.qmd
+++ b/JA_DisEco_Fall2025.qmd
@@ -5,6 +5,8 @@ format: html
 editor: visual
 ---
 
+------------------------------------------------------------------------
+
 Find area of a circle with radius 5 cm.
 
 Formula: ¶ \* r\^2
@@ -29,7 +31,7 @@ Summarily, the epidemiological triad teaches that diseases aren't just caused by
 
 **Sample Size for disease Detection**
 
-![SAMPLE SIZE TABLE](images/ss_table (1).png){fig-align="center"}
+![SAMPLE SIZE TABLE](images/ss_table%20(1).png){fig-align="center"}
 
 [**Question 1**]{.underline}
 
@@ -64,4 +66,93 @@ You sample 300 deer from a high fenced facility that has a herd of 4000. None of
 
 With **0** deer not having antibodies out of **300** sampled in a herd of **4,000** deer, the **95%** upper confidence limit for prevalence is about **\< 1.5%**. Using the hypergeometric approach for a herd of **N = 4,000** and a sample of **n = 300**, the **95% upper bound** on true prevalence is about **\< 1%** ; more precisely, about **\< 0.95%**.
 
-# 
+------------------------------------------------------------------------
+
+# WORKSHEET 3
+
+**Measures of disease frequency: Prevalence and Incidence**
+
+|     |     |     |     |     |     |     |
+|-----|-----|-----|-----|-----|-----|-----|
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |
+
+### a) Incidence on 06/12/25, 06/14/25, and 06/15/25
+
+Definition:\
+Incidence = (Number of new cases on a given day) ÷ (Number of individuals at risk on that day)
+
+| DATE    | NEW CASES | INCIDENCE (Cases per elk day)               |
+|---------|-----------|---------------------------------------------|
+| 6/12/25 | 6         | 6 / 53 = **0.113(11.3%) Cases per elk day** |
+| 6/14/25 | 2         | 2 / 47 = **0.043(4.3%) Cases per elk day**  |
+| 6/15/25 | o         | 0 / 45= **0.000(0%) Cases per elk day**     |
+
+**N.B: unit; Cases per elk day**
+
+### b) Prevalence on 06/13/25 and 06/16/25
+
+Definition:\
+Prevalence = (Number of existing cases on a specific day) ÷ (Total population)
+
+| Date    | Existing Case | Prevalence (%)              |
+|---------|---------------|-----------------------------|
+| 6/13/25 | 12            | 12 / 56 = **0.214** (21.4%) |
+| 6/16/25 | 5             | 5 / 56 = **0.089** (8.9%)   |
+
+Total Elk = 56
+
+By **06/13/25**, these elk were showing signs of conjunctivitis (new + ongoing):
+
+-   **2320B** – first infected 06/12
+
+-   **2355B** – first infected 06/11
+
+-   **2565B** – first infected 06/11
+
+-   **2763B** – first infected 06/12
+
+-   **2772B** – first infected 06/12
+
+-   **1889B** – first infected 06/10
+
+-   **1322B** – first infected 06/13 **(new)**
+
+-   **4533B** – first infected 06/13 **(new)**
+
+-   **4597B** – first infected 06/12
+
+-   **5666B** – first infected 6/11
+
+-   **5971B** – first infected 06/11
+
+-   **6001B** – first infected 06/12
+
+By **06/16/25**, only elk **still showing disease** were counted (recovered elk are no longer included):
+
+-   **2320B** – still symptomatic
+
+-   **1766B** – symptomatic since 06/14
+
+-   **1322B** – symptomatic since 06/13
+
+-   **4533B** – symptomatic since 06/13
+
+-   **4599B** – symptomatic since 06/14
+
+-    Existing infected elk: **2320B, 1766B, 1322B, 4533B, 4599B**
+
+### c) Day when Prevalence = Incidence (numerically)
+
+On **06/15/25**, both prevalence and incidence were **0** because no new or existing cases were observed.
+
+### d) Day with Lowest Incidence
+
+The lowest incidence occurred on **06/15/25**, when there were **0 new cases** of conjunctivitis.
