--- a/JAA_DisEco_Fall2025.qmd
+++ b/JAA_DisEco_Fall2025.qmd
@@ -444,11 +444,13 @@ Overall prevalence:
 
 ## 1. Overall prevalence of *Baylisascaris procyonis*
 
--    **Sample size (N)** = 106 Raccoons
+-   **Sample size (N)** = 106 Raccoons
 
-    Infected (num_Bpro \> 0) = **50**
+```         
+Infected (num_Bpro \> 0) = **50**
 
-    Uninfected (num_Bpro = 0) = **56**
+Uninfected (num_Bpro = 0) = **56**
+```
 
 **Prevalence**
 
@@ -475,7 +477,7 @@ Overall prevalence:
 
 ### **Statistical comparison (QPweb)**
 
--    Test: Fisher's Test , **p ≈ 0.0019**
+-   Test: Fisher's Test , **p ≈ 0.0019**
 
 Prevalence **differs significantly** among regions. North has much lower infection, while Central and South show high prevalence (\>60%). This suggests regional ecological differences (habitat, climate, raccoon density, latrine distribution).
 
@@ -495,7 +497,7 @@ Prevalence **differs significantly** among regions. North has much lower infecti
 
 ### **Statistical comparison (QPweb)**
 
--    Test: Fisher's Test , **p ≈ 0.0144**
+-   Test: Fisher's Test , **p ≈ 0.0144**
 
 Females have **significantly higher prevalence** than males. This may reflect behavioral differences (den attendance, contact with juveniles, latrine use).
 
@@ -515,9 +517,11 @@ Females have **significantly higher prevalence** than males. This may reflect be
 
 ### **Statistical comparison (QPweb)**
 
--    Test: Fisher's Test , **p ≈ 0.1526**
+-   Test: Fisher's Test , **p ≈ 0.1526**
 
-    Adults *tend* to have higher prevalence, but this difference **is not statistically significant**.This suggests a possible cumulative exposure effect, but the dataset cannot conclusively confirm it.
+```         
+Adults *tend* to have higher prevalence, but this difference **is not statistically significant**.This suggests a possible cumulative exposure effect, but the dataset cannot conclusively confirm it.
+```
 
 **5. Analyze sex differences within each region.**
 
@@ -539,12 +543,12 @@ Females have **significantly higher prevalence** than males. This may reflect be
 
 **Females**
 
-|            |       |              |                 |                |
-|------------|-------|--------------|-----------------|----------------|
-| **Region** | **n** | **Infected** | **Prevalence**  | **CI**         |
-| North      | 21    | 8            | 38.1%           | 19.7% - 59.7%  |
-| Central    | 5     | 5            | 100%            | 50.0% - 100.0% |
-| South      | 11    | 11           | 100%            | 70.9% - 100%   |
+|            |       |              |                |                |
+|------------|-------|--------------|----------------|----------------|
+| **Region** | **n** | **Infected** | **Prevalence** | **CI**         |
+| North      | 21    | 8            | 38.1%          | 19.7% - 59.7%  |
+| Central    | 5     | 5            | 100%           | 50.0% - 100.0% |
+| South      | 11    | 11           | 100%           | 70.9% - 100%   |
 
 **Males**
 
@@ -559,3 +563,151 @@ Females have **significantly higher prevalence** than males. This may reflect be
 # **CONCLUSION**
 
 Infection with ***B. procyonis*** varies widely, with the highest prevalence in Central and South Asia. Females are more likely to become infected, particularly in high-risk settings. Age differences exist, but are not statistically significant. Worm burdens are highly aggregated, making a few number of heavily infected raccoons the primary cause of ambient egg contamination. These patterns highlight important risk gradients for wildlife, domestic animals, and human exposure in endemic areas.
+
+------------------------------------------------------------------------
+
+# WORKSHEET 9
+
+**1.** In 2024, a multistate Salmonella outbreak was linked to backyard poultry flocks in the  United States. What specific human behaviors contributed to the zoonotic spread of *Salmonella*? In your response, identify at least three practices by backyard poultry owners that increased the risk of Salmonella transmission, and briefly explain why these behaviors facilitated human infection.
+
+**ANSWER**
+
+— **HANDLING POULTRY WITHOUT WASHING HANDS AFTERWARD :** Owners of backyard flocks often caressed birds (including chicks and Hen) before eating, cooking, or touching their faces. Contaminated hands can easily transfer salmonella to the mouth, resulting in illness.
+
+— **KEEPING OF POULTRY IN HOUSES, PARTICULALRY IN LIVING SPACES :** Fecal contamination spread to floors, worktops, and other surfaces when birds or outdoor equipment (feed containers, waterers, bedding) were brought inside. Salmonella exposure in households increased significantly as a result.
+
+— **USE OF POULTRY AS PETS :** Many poultry owners see the broiler chicks as pets that the cuddle, caress and sometimes kiss. Bacterial occurrence often occur through these unsafe practices thereby leading to infection. When a birds mouth or beak comes in contact with its feets , especially one that contains fecal sample, transmission and infection with salmonella is inevitable.
+
+— **ALLOWING KIDS HANDLE BIRDS UNSUPERVISED :** Children often and frequently put their hands in their mouth or even fail to wash their hands properly , thus increasing the chances of ingesting the bacteria.
+
+conclusively, these practices aids the spread of salmonella as the bacteria is commonly shed in poultry feces and persists in the environment and easily transferred to human mouths , hands and household surfaces.
+
+**2.** Tall fescue grass is commonly infected with a fungal endophyte (*Epichloë coenophiala*) that produces ergot alkaloids associated with fescue toxicosis in grazing livestock.
+
+a\. What advantage does Tall fescue gain from being infected with a fungal endophyte?
+
+b\. What environmental and ecological factors drive the occurrence and severity of fescue toxicosis in grazing systems?
+
+c\. What are the key clinical signs of fescue toxicity in cattle?
+
+**ANSWER**
+
+**(A)**
+
+**— ENHANCED DROUGHT TOLERANCE AND STRESS RESISTANCE:** Endophyte infection of the tall fescue strengthens the plants ability to withstand heat and water stress, helping it persist during harsh environmental conditions.
+
+— **IMPROVED PERSISTENCE AND REGROWTH:** Tall fescue infected with endophyte has rapid regrowth and is quite tolerant to overgrazing. These advantages allows the forage to maintain strong stands even under heavy grazing pressure and poor management.
+
+— **PROTECTION AGAINST HERBIVORY (BIOTIC STRESS):** The endophyte produces an ergot alkaloids that causes toxicosis. However, these same alkaloids acts as natural defense reducing insect feeding and grazing pressure and this allows tall fescue to survive better than uninfected fescue.
+
+— **COMPETITIVE ADVANTAGE:** With these qualities, i.e improved stress tolerance and herbivore resistance, infected tall fescue can outcompete their other forage species, thus dominating most ecological pastures.
+
+**(B)**
+
+— **TEMPERATURE AND DROUGHT STRESS:** Temperature and drought stress increases alkaloid production. Higher alkaloid levels in plants means greater toxin exposure for grazing livestock raising the risk and severity of toxicosis.
+
+— **SOIL FERTILITY AND MICROBIAL EFFECT:** Soil nutrients and microbial communities affect the expression of endophytes. If the soil conditions promote the activity of the endophytes, the plant produces more ergot alkaloids, increasing toxicosis risk.
+
+— **GRAZING PRACTICES AND MANAGEMENT:** Toxin buildup and illness risk are influenced by management choices such pasture rotation, grazing intensity, and fodder availability. Animals are forced to eat more infected fescue in poorly managed grazing systems, increasing exposure.
+
+— **DISEASE ECOLOGY FRAMEWORK (MULTI TROPIC INTERACTIONS):** Fescue toxicosis behaves like a multitrophic disease system driven by interactions among Host plant (Tall Fescue), Symbiont (Epichloe endophyte), Victim host (Grazing livestock), environment (climate, soil nutrient, grazing pressure). Livestock disease severity is indirectly increased by environmental conditions that enhances the plant endophyte interaction or boost toxin production.
+
+**(C)**
+
+— **HEAT STRESS AND IMPAIRED THERMOREGULATION:** Cattle often show elevated body temperatures, difficulty in dissipating heat and increased susceptibility to heat stress.
+
+— **REDUCED PERFORMANCE AND WEIGHT GAIN:** Fescue toxicosis negatively affects livestock health leading to poor growth, decreased feed efficiency, and reduced overall productivity.
+
+— **VASOCONSTRICTION AND REDUCED CIRCULATION:** Since these alkaloids causes vasoconstriction, cattle sometime show signs of cold extremities, reduced blood flow among other diseases.
+
+------------------------------------------------------------------------
+
+# WORKSHEET 10
+
+1.  What are the different routes of transmission of the African Swine Fever? What roles do Humans play in the spread of the transmission of ASF.
+
+    **ANSWER**
+
+    **ROUTES OF TRANSMISSION**
+
+— **DIRECT CONTACT WITH PIGS:** Contact with infected domestic pigs and wild boar. Virus is usually shed in saliva, urine , blood, nasal secretions.
+
+—**INDIRECT CONTACT (FOMITES):** This is usually from contaminated boots, equipment, clothing, transport vehicles, bedding and feed. Virus remains stable for long period in organic materials.
+
+—**INGESTION:** This occurs through feeding pigs contaminated pork or pork products. Virus can survive for months in smoked, cured, or dried meat.
+
+—**VECTOR BORNE TRANSMISSION:** This occurs through soft ticks (*Ornithodoros spp*) ; this ticks can maintain and transmit the virus in endemic regions, especially in Africa and some parts of Europe. Biological transmission occurs when ticks feed on pigs.
+
+—**ENVIRONMENTAL CONTAMINATION:** The Virus persists in soil, carcasses, slurry, and farm environments.
+
+**ROLE OF HUMANS**
+
+Humans contribute to the transmision of African Swine Fever , as they are implicated in its long distance spread through the following ways:
+
+1.  Movement of infected pigs across different regions and countries.
+
+2.  Transportation of contaminated pork products which inevitably introduce the virus into new areas.
+
+3.  Poor farm bio-security; which includes contaminated boots, equipment and clothing.
+
+4.  Improper disposal of carcasses or waste from infected farms.
+
+5.  Swill feeding practices, especially when the food waste and with contaminated pork is fed to pigs.
+
+6.  Travelers carrying infected pork products inadvertently releasing the virus into the environment.
+
+<!-- -->
+
+2.  Describe how co-infection with Koala retrovirus (KoRV) affects the severity, progression and management of Chlamydia in Koalas.
+
+    **ANSWER**
+
+    ***Chlamydia pecorum*** infections frequently cause conjunctivitis, UTIs, and infertility in koalas. These results are significantly worsened when Koala retrovirus (KoRV) is present.
+
+    **—EFFECTS ON DISEASE SEVERITY**
+
+    Similar to other retroviruses, KoRV weakens the koala immune system. The koala is more vulnerable to bacterial infections such as chlamydia as a result of this immunosuppression. Consequently, co-infected koalas with chlamydia and KoRV frequently experience more severe clinical illness. Compared to koalas infected with chlamydia alone, these koalas have more aggressive urinary tract disease often known as wet bottom, faster progressing ocular infections and greater incidence of reproductive tract pathology.
+
+    — **EFFECTS ON DISEASE PROGRESSION**
+
+    Compared to koalas without KoRV, co-infected koalas exhibit higher chlamydia burdens and more persistent infections. Since their immune system is unable to establish effective control, the disease advances more quickly and frequently becomes chronic. Furthermore, systemic immunological dysregulationis linked to KoRV-A, the endogenous variant of the virus which exacerbates tissue damage and inflammation.
+
+    —**EFFECTS ON MANAGEMENT**
+
+    Treatment and population level management of Chlamydia in Koalas are considerably complicated by KoRV. Antibiotics like doxycycline are less effective in koalas whose immune systems have been lowered by KoRV, and even after medication is finished, these animals have greater rates of occurrence, which lowers treatment success. Since co-infected Koalas frequently require prolonged medical care and continuous supportive therapy, their recuperation times are also significantly higher.
+
+    Additionally, since experimental Chlamydia Vaccines typically work less well in KoRV positive koalas, vaccination attempts are also impacted. Due to the high rates of infertility linked to co-infection, KoRV infection creates significant hurdles for conservation and breeding efforts , thus increasing morbidity and mortality at the population level. Generally, KoRV works as an immunosupressive amplifier of Chlamydia illness, making recovery , treatment and management of afflicted koala populations far more challenging.
+
+3.   Snake Fungal Disease (SFD), caused by *Ophidiomyces ophiodiicola*, is an emerging threat to wild snake populations in North America. What are the key challenges associated with the surveillance and management of Snake Fungal Disease (SFD)?
+
+    **ANSWER**
+
+Snake Fungal Disease (SFD) caused by ***Ophidiomyces ophiodiicola*** threatens many wild snake species. Effective management is due to several ecological , biological and logistical challenges;
+
+**KEY CHALLENGES IN SURVEILLANCE**
+
+—**CRYPTIC NATURE OF SNAKES:** These snakes are often difficult to locate making population level monitoring difficult.
+
+—**LOW DETECTION PROBABILITY:** Sometimes, early infection may show subtle or no visible lesions and to confirm these suspicions, confirmatory diagnosis requieing swabs, biopsies and PCR testing has to be carried out.
+
+—**GEOGRAPHIC RANGE:** The geographic range for surveillance is quite wide and SFD occurs throughout much of north america, requiring significant resources to monitor.
+
+—**INADEQUATE BASELINE DATA:** Since there are inadequate baseline data, especially regarding historical health records for many snake species, it is seemingly difficult to assess long term trends or perhaps incorporate suggestions to alleviate or curb infection through species transmission.
+
+—**SPECIES VARIABILITY:** Another challenge in surveillance is the variability in species, as diffirent specie shows different susceptibility and present diseases differently.
+
+**KEY CHALLENGES IN MANAGEMENT**
+
+—**UNESTABLISHED TRETAMENT METHODS:** In the management of SFD, antifungals usually work in captivity , yet they are impractical in the field. furthermore, releasing of treated snakes into the wild are predisposed to the risk of being reinfected.
+
+—**FUNGUS PERSISTENCE:** In the management of SFD, the fungus ***Ophidiomyces*** survives in the soil, leaf litter, and hibernacula; and this predisposes snakes to infection and reinfection in shared habitats.
+
+—**LIMITED RESOURCES:** Wildlife diseases in reptiles receives less attention and funding for research purposes than mammalian or avian diseases.
+
+—**ECOSYSTEM IMPACTS:** Snakes play critical roles in pest control and trophic dynamics, and the management of disease in one specie might influence predator-prey balance in the ecosystem.
+
+—**CONATINMENT CHALLENGES:** Manaagement of this specie might pose some difficulty as snakes moves across landscapes , making bio-security and containment quite difficult.
+
+—**CLIMATE AND ENVIRONMENTAL CHANGE:** Also, in the management process, warmer and wetter conditions may facilitate fungal growth and transmission.
+
+Conclusively, while management is limited by ecological complexities , the lack of scalable therapies and environmental persistence; surveillance is hampered by detection difficulties and insufficient data.
